--- a/myportfolio/stil/style.css
+++ b/myportfolio/stil/style.css
@@ -28,8 +28,12 @@ body{
     align-items: center; 
 }  
 body::-webkit-scrollbar {
-    display: none;
+    display: none; /* Hide scrollbar for Chrome, Safari and Opera */
   } 
+body{
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
 
 nav{
     width: 25%;
@@ -293,31 +297,10 @@ main div:nth-child(2) h3{ font-size: 31px; color: var(--svjetlo-smeda);}
 width: 100vw;height: 100vh;}
 
 @media screen and (max-width: 800px) {
-
     #version-desktop{
         display: none;
     }
     #version-mobile{
         display: flex;
     }
-
-
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
