--- a/myportafolio/style.css
+++ b/myportafolio/style.css
@@ -270,7 +270,7 @@ main div:nth-child(2) h3{ font-size: 31px; color: var(--svjetlo-smeda);}
 #version-mobile{
     width: 100vw; 
     color: white;
-    background-color: blue;
+    background-color: var(--smeda);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -392,26 +392,27 @@ main div:nth-child(1) h3{
 } 
 #version-mobile div:nth-child(1) div section:nth-child(1){
     width: 100%;
-    height: 15%;
+    height: 5%;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    align-items: center;
+    justify-content: space-between; 
 }
 #version-mobile div:nth-child(1) div section:nth-child(2){
     width: 100%;
-    height: 70%;
+    height: 60%;
     overflow: hidden;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: center; 
 }
 #version-mobile div:nth-child(1) div section:nth-child(3){
     width: 100%;
-    height: 15%;
+    height: 5%;
     display: flex; 
-    align-items: end;
+    align-items: center;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-between; 
 }
 #version-mobile div:nth-child(1) div h3{
     color: var(--bijela); 
@@ -447,15 +448,16 @@ main div:nth-child(1) h3{
 } 
 #version-mobile div:nth-child(2) div section:nth-child(1){
     width: 100%;
-    height: 15%;
+    height: 5%;
     display: flex;
+    align-items: center;
     flex-direction: row;
     justify-content: space-between;
     background-color: var(--svjetlo-smeda);
 }
 #version-mobile div:nth-child(2) div section:nth-child(2){
     width: 90%;
-    height: 70%;
+    height: 90%;
     overflow: hidden;
     display: flex;
     align-items: center;
@@ -464,9 +466,9 @@ main div:nth-child(1) h3{
 }
 #version-mobile div:nth-child(2) div section:nth-child(3){
     width: 100%;
-    height: 15%;
+    height: 5%;
     display: flex; 
-    align-items: end;
+    align-items: center;
     flex-direction: row;
     justify-content: space-between; 
     background-color: var(--svjetlo-smeda);
@@ -505,15 +507,16 @@ main div:nth-child(1) h3{
 } 
 #version-mobile div:nth-child(3) div section:nth-child(1){
     width: 100%; 
-    height: 7.5%;
+    height: 5%;
     display: flex;
+    align-items: center;
     flex-direction: row;
     justify-content: space-between;
     background-color: var(--smeda);
 }
 #version-mobile div:nth-child(3) div section:nth-child(2){
     width: 90%;
-    height: 70%;
+    height: 90%;
     overflow: hidden;
     display: flex;
     align-items: center;
@@ -522,9 +525,9 @@ main div:nth-child(1) h3{
 }
 #version-mobile div:nth-child(3) div section:nth-child(3){
     width: 100%; 
-    height: 7.5%;
+    height: 5%;
     display: flex; 
-    align-items: end;
+    align-items: center;
     flex-direction: row;
     justify-content: space-between; 
     background-color: var(--smeda); 
