--- a/myportafolio/style.css
+++ b/myportafolio/style.css
@@ -673,3 +673,77 @@ main div:nth-child(1) h3{
 
 
 }
+
+
+
+@keyframes revealimg {
+    0%{
+        transform: scaleY(50%) translateY(10px); 
+    }
+    100%{
+        transform: scaleY(100%) translateY(0px); 
+    }
+}
+
+#slikaR1, #slikaR2, #slikaR3, #slikaR4, #slikaR5, 
+#slikaG1, #slikaG2, #slikaG3, #slikaG4, #slikaG5
+{
+    animation: revealimg 0.5s;
+}
+
+
+.item01G, .item01R{
+    transform: translateX(15px);
+    transition: 0.8s cubic-bezier(0.82, 0, 0.18, 1);
+}
+.item02G, .item02R{
+    transform: translateX(-15px);
+    transition: 0.8s cubic-bezier(0.82, 0, 0.18, 1);
+}
+.scroll01GR{
+    transform: translateX(0px);
+    transition: 0.8s cubic-bezier(0.82, 0, 0.18, 1);
+}
+.scroll02GR{
+    transform: translateX(0px);
+    transition: 0.8s cubic-bezier(0.82, 0, 0.18, 1);
+}
+
+
+.itemK4{
+    transform: translateY(-25px);
+    transition: 0.8s cubic-bezier(0.82, 0, 0.18, 1);
+}
+.itemK3{
+    transform: translateY(-20px);
+    transition: 0.8s cubic-bezier(0.82, 0, 0.18, 1);
+}
+.itemK2{
+    transform: translateY(-15px);
+    transition: 0.8s cubic-bezier(0.82, 0, 0.18, 1);
+}
+.itemK1{
+    transform: translateY(-10px);
+    transition: 0.8s cubic-bezier(0.82, 0, 0.18, 1);
+}
+
+.scrollK1234{
+    transform: translateY(0px);
+    transition: 0.8s cubic-bezier(0.82, 0, 0.18, 1);
+}
+
+
+
+
+
+.itemA1{ 
+    transform: scale(120%);
+    clip-path: polygon(0% 0%, 100% 0%, 100% 50%, 0% 50%); 
+    transition: 0.8s cubic-bezier(0.82, 0, 0.18, 1);
+}
+
+.scrollA1{ 
+    transform: scale(100%);
+    clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%); 
+    transition: 0.8s cubic-bezier(0.82, 0, 0.18, 1);
+}
