--- a/myportafolio/style.css
+++ b/myportafolio/style.css
@@ -396,8 +396,7 @@ main div:nth-child(1) h3{
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-between; 
-    overflow-y: hidden;
+    justify-content: space-between;
 }
 #version-mobile div:nth-child(1) div section:nth-child(2){
     width: 100%;
@@ -414,7 +413,6 @@ main div:nth-child(1) h3{
     align-items: center;
     flex-direction: row;
     justify-content: space-between; 
-    overflow-y: hidden;
 }
 #version-mobile div:nth-child(1) div h3{
     color: var(--bijela); 
@@ -456,7 +454,6 @@ main div:nth-child(1) h3{
     flex-direction: row;
     justify-content: space-between;
     background-color: var(--svjetlo-smeda);
-    overflow-y: hidden;
 }
 #version-mobile div:nth-child(2) div section:nth-child(2){
     width: 90%;
@@ -475,7 +472,6 @@ main div:nth-child(1) h3{
     flex-direction: row;
     justify-content: space-between; 
     background-color: var(--svjetlo-smeda);
-    overflow-y: hidden;
 }
 #version-mobile div:nth-child(2) div h3{
     color: var(--crna);
@@ -517,7 +513,6 @@ main div:nth-child(1) h3{
     flex-direction: row;
     justify-content: space-between;
     background-color: var(--smeda);
-    overflow-y: hidden;
 }
 #version-mobile div:nth-child(3) div section:nth-child(2){
     width: 90%;
@@ -536,7 +531,6 @@ main div:nth-child(1) h3{
     flex-direction: row;
     justify-content: space-between; 
     background-color: var(--smeda); 
-    overflow-y: hidden;
 }
 #version-mobile div:nth-child(3) div h3{
     color: var(--bijela);
@@ -567,7 +561,7 @@ main div:nth-child(1) h3{
 
 #version-mobile div:nth-child(4) section{
     width: 90%;
-    height: 80%;
+    height: 70%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -681,6 +675,14 @@ main div:nth-child(1) h3{
 }
 
 
+@-webkit-keyframes revealimg {
+    0%{
+        -webkit-transform: scaleY(50%) translateY(10px); 
+    }
+    100%{
+        -webkit-transform: scaleY(100%) translateY(0px); 
+    }
+}
 
 @keyframes revealimg {
     0%{
@@ -695,6 +697,7 @@ main div:nth-child(1) h3{
 #slikaG1, #slikaG2, #slikaG3, #slikaG4, #slikaG5
 {
     animation: revealimg 0.5s;
+    -webkit-animation: revealimg 0.5s;
 }
 
 
