--- a/myportafolio/style.css
+++ b/myportafolio/style.css
@@ -625,15 +625,15 @@ main div:nth-child(1) h3{
 @keyframes load {
     0%{
         background-color: var(--crna);
-        clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%);
+        clip-path: polygon(0% 0%, 0% 100%, 100% 100%, 0% 100%);
     }
     50%{ 
         background-color: var(--svjetlo-smeda);
-        clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%);
+        clip-path: polygon(0% 0%, 0% 100%, 100% 100%, 0% 100%);
     }
     100%{ 
         background-color: var(--svjetlo-smeda);
-        clip-path: polygon(0% 0%, 100% 0%, 100% 0%, 0% 0%);
+        clip-path: polygon(0% 0%, 0% 100%, 0% 100%, 0% 0%);
     }
 }
 #loading{
@@ -731,11 +731,15 @@ main div:nth-child(1) h3{
 
 .itemA1{ 
     transform: scaleY(50%) translateY(-10px);
+    -webkit-transform: scaleY(50%) translateY(-10px);
+    -ms-transform: scaleY(50%) translateY(-10px);
     transition: 0.8s cubic-bezier(0.82, 0, 0.18, 1);
 }
 
 .scrollA1{ 
     transform: scaleY(100%) translateY(0px);
+    -webkit-transform: scaleY(100%) translateY(0px);
+    -ms-transform: scaleY(100%) translateY(0px);
     transition: 0.8s cubic-bezier(0.82, 0, 0.18, 1);
 }
 
@@ -743,10 +747,14 @@ main div:nth-child(1) h3{
 
 .slikaTrans{ 
     transform: scaleY(50%) translateY(-10px);
+    -webkit-transform: scaleY(50%) translateY(-10px);
+    -ms-transform: scaleY(50%) translateY(-10px);
     transition: 0.8s cubic-bezier(0.82, 0, 0.18, 1);
 }
 
 .scrollTrans{ 
     transform: scaleY(100%) translateY(0px);
+    -webkit-transform: scaleY(100%) translateY(0px);
+    -ms-transform: scaleY(100%) translateY(0px);
     transition: 0.8s cubic-bezier(0.82, 0, 0.18, 1);
 }
