--- a/myportafolio/style.css
+++ b/myportafolio/style.css
@@ -730,13 +730,15 @@ main div:nth-child(1) h3{
 
 
 .itemA1{ 
-    transform: scaleY(50%) translateY(-10px);
-    -webkit-transform: scaleY(50%) translateY(-10px);
-    -ms-transform: scaleY(50%) translateY(-10px);
+    opacity: 0;
+    transform: scaleY(80%) translateY(-10px);
+    -webkit-transform: scaleY(80%) translateY(-10px);
+    -ms-transform: scaleY(80%) translateY(-10px);
     transition: 0.8s cubic-bezier(0.82, 0, 0.18, 1);
 }
 
 .scrollA1{ 
+    opacity: 1;
     transform: scaleY(100%) translateY(0px);
     -webkit-transform: scaleY(100%) translateY(0px);
     -ms-transform: scaleY(100%) translateY(0px);
