--- a/xyz/style.css
+++ b/xyz/style.css
@@ -32,7 +32,7 @@ section:nth-child(2){
     position: absolute;
     top: 90vh;
     left: 0;
-    background-color: aquamarine;
+    background-color: blue;
 }
 
 section:nth-child(3){
