--- a/p5js-vjezba/style.css
+++ b/p5js-vjezba/style.css
@@ -1,195 +1,146 @@
-@import url("https://fonts.googleapis.com/css2?family=Righteous&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap");
-@font-face {
-  font-family: fontichA; 
-  src: url(assets/fontovi/font1.ttf);
+:root{
+  --portion: 6%;
 }
 
 @font-face {
-  font-family: fontichB;
-  src: url(assets/fontovi/font1.ttf);
+  font-family: mojFont;
+  src: url(assets/fontovi/fontB7.ttf);
+} 
+
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: mojFont;
 }
 
-@font-face {
-  font-family: fontichC; 
-  src: url(assets/fontovi/font1.ttf);
-}
-
-@font-face {
-  font-family: fontichD; 
-  src: url(assets/fontovi/font1.ttf);
-}
-
-* {
-  margin: 0px;
-  padding: 0px;
-  cursor: crosshair; 
-}
-
-body { 
-  width: 100%;
-  height: 250vh;
-}
-
- 
- 
- 
-
- 
- 
-#kontakt {
-  font-size: 15px;
-  cursor: auto;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-         align-items: center;
-  background-color: #181818;
-  height: 90px;
-  display: -webkit-box;
-  display: -ms-flexbox;
+body{
+  background-color: rgb(201, 38, 65);
+  background-color: white;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  -webkit-transition: 0.5s;
-  transition: 0.5s;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
 }
 
-@media screen and (min-width: 767px) {
-  #kontakt {
-    background-color: #181818;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
-    -ms-flex-pack: distribute;
-        justify-content: space-around;
-    font-size: 18px;
-  }
+div{
+  width: calc(100vw - 14px);
+  height: calc(100vh - 14px);
+  display: flex;
+  flex-direction: column; 
 }
 
-#kontakt .info1 {
-  cursor: auto;
-  letter-spacing: -0.3px;
-  font-family: fontichB;
-  background-color: transparent;
-  color: #fefefe;
+section:nth-child(1){
+  height: calc(100% - var(--portion)); 
 }
 
-@media screen and (min-width: 767px) {
-  #kontakt .info1 {
-    color: #fefefe;
-    font-size: 18px;
-  }
+section:nth-child(1) div{
+  width: 25%;
+  height: 30%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+section:nth-child(1) div div{
+  width: 100%;
+  height: fit-content;    
+  display: flex;
+  flex-direction: column;
+}
+section:nth-child(1) div div a:nth-child(1){ 
+  height: 50%;
+  display: flex;
+  align-items: end;
+}
+section:nth-child(1) div div a:nth-child(2){ 
+  height: 50%;
+  display: flex;
+  align-items: start;
 }
 
-#kontakt .info2 {
-  font-size: 15px;
-  cursor: auto;
-  letter-spacing: -0.3px;
-  font-family: fontichB;
-  background-color: transparent;
-  color: #fefefe;
-}
-
-@media screen and (min-width: 767px) {
-  #kontakt .info2 {
-    color: #fefefe;
-    font-size: 18px;
-  }
-}
-
-#kontakt .info2:hover {
-  -webkit-transform: translateY(0px);
-          transform: translateY(0px);
-}
-
-@media screen and (min-width: 767px) {
-  #kontakt .info2:hover {
-    -webkit-transform: translateY(0px);
-            transform: translateY(0px);
-  }
-}
-
-#kontakt:hover {
-  background-color: #181818;
-}
-
-@media screen and (min-width: 767px) {
-  #kontakt:hover {
-    background-color: #181818;
-    -webkit-transition: 0.3s;
-    transition: 0.3s;
-  }
-}
-
- 
- 
-
-.heder{ 
-  position: absolute;
-  width: 96vw;
-  left: 2vw;
-  top: 5vh;
-  display: grid;
-  grid-template-columns: repeat(5, 1fr);
-}
-
-a{
-  text-decoration: none; 
-  color: white;
-  font-weight: bold;
-  text-decoration: underline;
-  font-family: fontichA;
-  font-size: 14px;
-  text-align: center;
-  text-decoration-thickness: 2px;
-  letter-spacing: normal;
-  transition: 0.5s;
-}
-
-a:hover{
-  cursor: pointer;
-  letter-spacing: 3px;
-  transition: 0.3s;
-}
-
-
-
-.futer{ 
-  position: absolute;
-  width: 96vw;
-  left: 2vw;
-  bottom: 5vh;
-  display: grid;
-  grid-template-columns: repeat(5, 1fr);
-}
-
-.isto{
-  color: black;
-  font-family: fontichA;
-  font-size: 14px;
-  text-align: center;
-}
-
- 
-
-main{
-    position: absolute;
-    top: 130vh;
-    left: 0;
-}
 p{
-    font-family: fontichA;
-    width: 70%;
-    padding-left: 15%;
-    color: black;
-    font-size: 14px;
-    text-align: center;
+  text-align: left;
+}
+
+
+
+
+section:nth-child(2){
+  height: var(--portion); 
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: end;
+}
+
+
+/*footer basically*/
+section:nth-child(2) div{ 
+  height: fit-content;
+  display: flex;
+}
+
+section:nth-child(2) div:nth-child(1){ 
+  flex-direction: row;
+  justify-content: start;
+}
+
+section:nth-child(2) div:nth-child(2){ 
+  flex-direction: row;
+  justify-content: space-around;
+}
+  section:nth-child(2) div:nth-child(2) div{ 
+      width: 100%;
+      justify-content: center;
+  }
+  section:nth-child(2) div:nth-child(2) div:nth-child(1){ 
+      display: flex;
+      flex-direction: row;
+      justify-content: end;
+  }
+  section:nth-child(2) div:nth-child(2) div:nth-child(2){ 
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+  }
+  section:nth-child(2) div:nth-child(2) div:nth-child(3){ 
+      display: flex;
+      flex-direction: row;
+      justify-content: start;
+  }
+
+section:nth-child(2) div:nth-child(3){ 
+  flex-direction: row;
+  justify-content: center;
+}
+
+section:nth-child(2) div:nth-child(4){ 
+  flex-direction: row;
+  justify-content: end;
+}
+/*end of footer-----------*/
+
+a, p{
+  color: black;
+  font-size: 16px;
+}
+a{
+  text-decoration: none;
+  font-weight: normal;
+  transition: 0.3s cubic-bezier(0.75, 0, 0.25, 1);
+}
+a:hover{
+  font-weight: bold;
+  transition: 0.3s cubic-bezier(0.75, 0, 0.25, 1);
+}
+span{
+  text-decoration: underline;
+}
+
+#vid{
+  color: white;
+  background-color: transparent;
+}
+#vid p, #vid a{
+  color: transparent;
 }
