--- a/p5js-vjezba/style.css
+++ b/p5js-vjezba/style.css
@@ -21,6 +21,7 @@ body{
   align-items: center;
   justify-content: center;
   height: 100vh;
+  overflow-y: hidden;
 }
 
 div{
@@ -122,7 +123,8 @@ section:nth-child(2) div:nth-child(4){
 
 a, p{
   color: black;
-  font-size: 16px;
+  font-size: 21px;
+  font-size: 1.2vw;
 }
 a{
   text-decoration: none;
@@ -144,3 +146,33 @@ span{
 #vid p, #vid a{
   color: transparent;
 }
+
+div section:nth-child(2) div{
+  background-color: white;
+}
+
+
+
+/*tajni----------------*/
+#tajni{
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100vw;
+  height: 96vh;
+  background-color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transform: translateY(0px);
+}
+#tajni img{
+  height: 80%;
+  width: auto;
+}
+
+
+
+ #selekted{
+  text-decoration: line-through;
+ }
