--- a/xyz/mywebsite/style.css
+++ b/xyz/mywebsite/style.css
@@ -7,6 +7,10 @@
     font-weight: normal;
 }
  
+:root{
+    --rub: 10px;
+}
+
 body{
     height: 100vh;
     background-color: pink;
@@ -16,11 +20,11 @@ body{
 }
 
 section{
-    width: calc(100% - 280px);
-    height: calc(100% - 140px);
+    width: calc(100% - var(--rub));
+    height: calc(100% - var(--rub));
     background-color: red;
     display: grid;
-    grid-template-rows: 65% 30% auto;
+    grid-template-rows: 65% 32% auto;
 }
 
 /*section 1------------------------------------*/                
@@ -80,3 +84,26 @@ section div:nth-child(3){
                     justify-content: end;
                     align-items: center;
                 }
+                
+                
+section div:nth-child(1) div:nth-child(3){
+    background-color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+section div:nth-child(1) div:nth-child(3) section:nth-child(1){
+    width: 100%;
+    height: 100%;
+    background-color: rgba(2,12,220,0.6);
+}
+section div:nth-child(1) div:nth-child(3) section:nth-child(2){
+    width: 100%;
+    height: 100%;
+    background-color: rgba(12,255,0,0.6);
+}
+#original, #secret{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+} 
