--- a/xyz/mywebsite/styleBCKP.css
+++ b/xyz/mywebsite/styleBCKP.css
@@ -3,19 +3,17 @@
     padding: 0;
     box-sizing: border-box;
     font-family: Helvetica;
-    font-size: 1.4vw;
+    font-size: 24px;
     font-weight: normal;
-    color: white;
 }
  
 :root{
     --rub: 10px;
-    --plava: #021daa;
 }
 
 body{
     height: 100vh;
-    background-color: var(--plava);
+    background-color: pink;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -24,64 +22,64 @@ body{
 section{
     width: calc(100% - var(--rub));
     height: calc(100% - var(--rub));
-    background-color: var(--plava);
+    background-color: red;
     display: grid;
-    grid-template-rows: 75% 20% auto;
+    grid-template-rows: 65% 30% auto;
 }
 
 /*section 1------------------------------------*/                
 section div:nth-child(1){
-    background-color: var(--plava);
+    background-color: brown;
     display: grid;
     grid-template-columns: 18% 18% auto;
 }
                 section div:nth-child(1) div:nth-child(1){
-                    background-color: var(--plava);
+                    background-color: peru;
                 }
                 section div:nth-child(1) div:nth-child(2){
-                    background-color: var(--plava);
+                    background-color: tomato;
                 }
                 section div:nth-child(1) div:nth-child(3){
-                    background-color: var(--plava);
+                    background-color: saddlebrown;
                 }
 /*section 2------------------------------------*/                
 section div:nth-child(2){
-    background-color: var(--plava);
+    background-color: blue;
     display: grid;
     grid-template-columns: 27% auto;
 }
                 section div:nth-child(2) div:nth-child(1){
-                    background-color: var(--plava);
+                    background-color: teal;
                 }
                 section div:nth-child(2) div:nth-child(2){
-                    background-color: var(--plava);
+                    background-color: turquoise;
                 }
 /*section 3------------------------------------*/                
 section div:nth-child(3){
-    background-color: var(--plava);
+    background-color: green;
     display: grid;
     grid-template-columns: 13.5% 13.5% 13.5% auto;
 }
                 section div:nth-child(3) div:nth-child(1){
-                    background-color: var(--plava);
+                    background-color: greenyellow;
                     display: flex;
                     justify-content: start;
                     align-items: center;
                 }
                 section div:nth-child(3) div:nth-child(2){
-                    background-color: var(--plava);
+                    background-color: olive;
                     display: flex;
                     justify-content: start;
                     align-items: center;
                 }
                 section div:nth-child(3) div:nth-child(3){
-                    background-color: var(--plava);
+                    background-color: olivedrab;
                     display: flex;
                     justify-content: start;
                     align-items: center;
                 }
                 section div:nth-child(3) div:nth-child(4){
-                    background-color: var(--plava);
+                    background-color: lawngreen;
                     display: flex;
                     justify-content: end;
                     align-items: center;
@@ -89,68 +87,33 @@ section div:nth-child(3){
                 
                 
 section div:nth-child(1) div:nth-child(3){
-    background-color: var(--plava);
+    background-color: blue;
     display: flex;
     align-items: center;
     justify-content: center;
     position: relative;
 } 
-#original{  
+#original{
+    background-color: blue;
     width: calc(100% - 20px);
-    height: calc(70% - 20px); 
-    height: auto;
+    height: calc(100% - 20px);
     position: absolute;
-    top: 0px;
-    left: 0px; 
+    top: 10px;
+    left: 10px; 
     color: white;
     z-index: 36;
     clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%);
 } 
-#secret{ 
+#secret{
+    background-color: blue;
     width: calc(100% - 20px);
-    height: calc(70% - 20px); 
-    height: auto;
+    height: calc(100% - 20px);
     position: absolute;
-    top: 0px;
-    left: 0px; 
+    top: 10px;
+    left: 10px; 
     color: white;
     z-index: 35;
 } 
-#original h3{
-    text-transform: uppercase;
-} 
-
-section div:nth-child(1) div:nth-child(2){ 
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-
-section div:nth-child(2) div:nth-child(2){  
-    height: 70%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-}
-
-
-section div:nth-child(1) div:nth-child(1){  
-    background-color: transparent;
-    display: flex;
-    flex-direction: column;
-    justify-content: start;
-}
-
-section div:nth-child(1) div:nth-child(1) section{   
-    height: fit-content;
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-}
-
-section div:nth-child(1) div:nth-child(1) section h3{  
-    color: white;
+#gumb:hover{
+    cursor: pointer;
 }
