--- a/demo-p5js/demo-organizacija/style.css
+++ b/demo-p5js/demo-organizacija/style.css
@@ -1,4 +1,4 @@
-@font-face {font-family: fontA;src: url(../assets/fontovi/font1.ttf);}
+@font-face {font-family: fontA;src: url(../../assets/fontovi/font1.ttf);}
 * {
   margin: 0px;
   padding: 0px;
