--- a/demo-p5js/demo/style.css
+++ b/demo-p5js/demo/style.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: fontA;
-    src: url(../assets/fontovi/font2.ttf);
+    src: url(../../assets/fontovi/font2.ttf);
 }
 
 :root{
